@@ -1,5 +1,6 @@
 == 3.5 ==
 
+* Fixed issue with showing posts from protected categories
 * Fixed popup complete message links rendering issue
 * Fixed warning message which appear for subscriptions without access levels
 * Fixed members pagination issue when filter becomes reset after going to the next page
